kubernetes/mainnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: casperhaproxy-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8500
  selector:
    app: casperhaproxy
status:
  loadBalancer: { }
