kubernetes/mainnet/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperhaproxy-tls
spec:
  entryPoints:
    - secure
  routes:
    - match: Host(`rpc.casperholders.com`)
      kind: Rule
      services:
        - name: casperhaproxy-service
          port: 80
  tls:
    secretName: casperhaproxy-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperhaproxy-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rpc.casperholders.com`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: casperhaproxy-service
          port: 80
